--- a/css/style.css
+++ b/css/style.css
@@ -1049,6 +1049,7 @@ img{
 .main-slider h3{
 	font-size:36px;
 	color:#ffffff;
+	text-shadow: black 0.1em 0.1em 0.2em
 	font-weight:600;
 	line-height:1.4em;
 }
@@ -1056,6 +1057,7 @@ img{
 .main-slider .text{
 	font-weight:400;
 	line-height:1.6em;
+	text-shadow: black 0.1em 0.1em 0.2em
 	color:#ffffff;
 	font-size:18px;
 }
