--- a/css/style.css
+++ b/css/style.css
@@ -1057,7 +1057,7 @@ img{
 .main-slider .text{
 	font-weight:400;
 	line-height:1.6em;
-	text-shadow: black 0.1em 0.1em 0.2em
+	text-shadow: black 0.1em 0.1em 0.2em;
 	color:#ffffff;
 	font-size:18px;
 }
