--- a/css/style.css
+++ b/css/style.css
@@ -1049,7 +1049,7 @@ img{
 .main-slider h3{
 	font-size:36px;
 	color:#ffffff;
-	text-shadow: black 0.1em 0.1em 0.2em
+	text-shadow: black 0.1em 0.1em 0.2em;
 	font-weight:600;
 	line-height:1.4em;
 }
